--- a/microservices/EurekaServer-2/pom.xml
+++ b/microservices/EurekaServer-2/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.socgen.learn</groupId>
+	<groupId>com.learn</groupId>
 	<artifactId>EurekaServer-2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EurekaServer-2</name>
